# avvail-capstone

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  monitor.py  notes1.txt  pyproject.toml  requirements.txt  run-tests.py
.claude/: settings.local.json
models/: test-all-0_1-rf.joblib  test-united_kingdom-0_1-rf.joblib
solution-guidance/: cslib.py  logger.py  model.py
tests/: test_api.py  test_logger.py  test_model.py
