[project]
name = "avvail-capstone"
version = "0.1.0"
description = "IBM AI Enterprise Workflow Capstone - Time-series revenue forecasting system"
requires-python = ">=3.8,<3.12"
dependencies = [
    "numpy==1.24.4",
    "pandas==1.5.3",
    "matplotlib==3.7.3",
    "scipy==1.10.1",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "threadpoolctl==3.2.0",
    "Flask==2.2.5",
    "gunicorn==21.2.0",
    "pytest==7.4.4",
    "werkzeug==2.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solution-guidance", "tests"]
include = ["app.py", "monitor.py", "run-tests.py"]
